--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> bubbly </title>
-        <link href="style2.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="https://kit.fontawesome.com/44885d9653.js" crossorigin="anonymous"></script>
     </head>
