--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr"> 
     <head>
         <meta charset="utf-8">
-        <meta>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> bubbly </title>
         <link href="style.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
