--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="team-div">
                         <img class="image" src="Mari .jpeg">
                         <p class="text team-name"> Mari </p>
-                        <p class="text"> Core team </p>
+                        <p class="text team-position"> Core team </p>
                         <div>
                             <a href="https://twitter.com/MaritaLeu" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
@@ -84,7 +84,7 @@
                     <div class="team-div">
                         <img class="image" src="Tom.jpeg">
                         <p class="text team-name"> Tom </p>
-                        <p class="text"> Co-founder </p>
+                        <p class="text team-position"> Co-founder </p>
                         <div>
                             <a href="https://twitter.com/tom88jerry" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
@@ -93,8 +93,8 @@
 
                     <div class="team-div">
                         <img class="image" src="Armani.jpeg">
-                        <p class="text team-name"> Armani aka DJ AMN </p>
-                        <p class="text"> Head Moderator </p>
+                        <p class="text team-name"> Armani </p>
+                        <p class="text team-position"> Head Moderator </p>
                         <div>
                             <a href="https://twitter.com/armaniamn" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
@@ -105,8 +105,8 @@
                 <div id="team-flex">
                     <div class="team-div">
                         <img class="image" src="ParkBoGum.jpeg">
-                        <p class="text team-name"> ParkBoGum aka Gommy </p>
-                        <p class="text"> Core team </p>
+                        <p class="text team-name"> ParkBoGum </p>
+                        <p class="text team-position"> Core team </p>
                         <div>
                             <a href="https://twitter.com/condo2minium" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                             <a href="https://instagram.com/condominium" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
@@ -116,7 +116,7 @@
                     <div class="team-div">
                         <img class="image" src="Part.jpeg">
                         <p class="text team-name">Part</p>
-                        <p class="text">Head of bubbly’s marketing</p>
+                        <p class="text team-position">Head of bubbly’s marketing</p>
                         <div>
                             <a href="https://twitter.com/dtpartp" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                             <a href="https://instagram.com/ppart.p" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
@@ -126,7 +126,7 @@
                     <div class="team-div">
                         <img class="image" src="Ake.jpeg">
                         <p class="text team-name">Ake</p>
-                        <p class="text">Core team</p>
+                        <p class="text team-position">Core team</p>
                         <div>
                             <a href="https://twitter.com/draltdralt" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
