--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@
                         <p>'Fun from Arts, Function From App' - once the rocket
                             ship gears up to a full-stream, it launches into the
                             universe. Bubbly will blow your mind with its
-                            magically powers. Inspired by childhood memories,
+                            magically powers.
+                        </p>
+
+                        <p> Inspired by childhood memories,
                             with a narrative of cultivating conscience and
                             encouragement for those to step-out of their comfort
-                            zones, whilst feeling protected and supported.
-                            Each character is entirely unique, generated from
+                            zones, whilst feeling protected and supported.</p>
+
+                        <p> Each character is entirely unique, generated from
                             hundreds of traits, which is also a holder key pass to
                             experiencing a comfort space for friendship, surprises
                             of the Bubbly story and add-on bubble utilities.
-                            Artwork created by Krisdamin partnered with Yume
-                            Lab by Tom88Jerry, have come together to create a
-                            solution for Web3 Surfers.</p>
+                            </p>
                     </div>
             </section>
 
