--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#arts"> Artwork</a></li>
+                    <li><a href="#arts">Artwork</a></li>
                     <li><a href="#faqs">Faqs</a></li>
                     <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a class="icon" href="https://discord.gg/bubblystory"><i class="fa-brands fa-discord"></i></a> <a class="icon" href="https://medium.com/@bubblystorynft/welcome-to-the-world-of-bubbly-f416e4b2d7cc"> <i class="fa-brands fa-medium"></i> </a> <a class="icon" href="https://twitter.com/BubblyStory"> <i class="fa-brands fa-twitter"></i></a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
