--- a/index.html
+++ b/index.html
@@ -180,7 +180,11 @@
                 </div>
             </section>
         </main>
-        <footer> </footer>
+
+        <footer> 
+            <p class="footer">Designed by <a href="https://twitter.com/SCasitol">olamide</a></p>
+            <p class="footer"> Unofficial Bubbly website &copy 2022</p>
+        </footer>
         
         <script src="script.js"></script>
     </body>
