--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="blank-space"></div>
 
             <section id="arts">
+                <p class="sneaktext"> sneakpeek </p>
                 <div class="sneakpeek">
                     <img class="mySlides" src="sneak-1.jpeg" alt="">
                     <img class="mySlides" src="sneak-2.jpeg" alt="">
@@ -118,6 +119,7 @@
             </section>
 
             <section id="team">
+                <p class="meet"> MEET THE TEAM </p>
                 <div id="team-flex">
                     <div class="team-div">
                         <img class="image" src="Mari .jpeg">
@@ -159,6 +161,16 @@
                         </div>
                     </div>
 
+
+                    <div class="team-div">
+                        <img class="image" src="Ake.jpeg">
+                        <p class="text team-name">Ake</p>
+                        <p class="text team-position">Core team</p>
+                        <div>
+                            <a href="https://twitter.com/draltdralt" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
+                        </div>
+                    </div>
+
                     <div class="team-div">
                         <img class="image" src="Part.jpeg">
                         <p class="text team-name">Part</p>
@@ -168,13 +180,36 @@
                             <a href="https://instagram.com/ppart.p" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
                         </div>
                     </div>
+                </div>
+
+                <div id="team-flex">
+                    <div class="team-div">
+                        <img class="image" src="Ve.jpeg">
+                        <p class="text team-name">Ve</p>
+                        <p class="text team-position">Head Moderator</p>
+                        <div>
+                            <a href="https://twitter.com/Vedoteth" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
+                            <a href="https://www.instagram.com/vvednes_day/" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
+                        </div>
+                    </div>
 
                     <div class="team-div">
-                        <img class="image" src="Ake.jpeg">
-                        <p class="text team-name">Ake</p>
-                        <p class="text team-position">Core team</p>
+                        <img class="image" src="ploy.jpeg">
+                        <p class="text team-name">Ploy</p>
+                        <p class="text team-position"> Core team</p>
                         <div>
-                            <a href="https://twitter.com/draltdralt" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
+                            <a href="https://twitter.com/pylynn" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
+                            <a href="https://www.instagram.com/pylynn_/" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="team-div">
+                        <img class="image" src="ploy.jpeg">
+                        <p class="text team-name">Ploy</p>
+                        <p class="text team-position"> Core team</p>
+                        <div>
+                            <a href="https://twitter.com/pylynn" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
+                            <a href="https://www.instagram.com/pylynn_/" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
                         </div>
                     </div>
                 </div>
