--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             </section>  -->
 
             <section id="team">
+                <p class="meet"> MEET THE TEAM </p>
                 <div class="team-flex">
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="Mari .jpeg"> </div>
