--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <img class="mySlides" src="sneak-4.jpeg" alt="">
                     <img class="mySlides" src="sneak-5.jpeg" alt="">
                     <img class="mySlides" src="sneak-6.jpeg" alt="">
+                    <img class="mySlides" src="sneak-7.jpeg" alt="">
 
                     <div style="text-align:center"> 
                         <span class="dot" onclick="currentSlide(1)"></span> 
@@ -72,6 +73,7 @@
                         <span class="dot" onclick="currentSlide(4)"></span>
                         <span class="dot" onclick="currentSlide(5)"></span>
                         <span class="dot" onclick="currentSlide(6)"></span>
+                        <span class="dot" onclick="currentSlide(7)"></span>
                     </div>
                 </div>
                 
@@ -221,7 +223,7 @@
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="Mari .jpeg"> </div>
                         <p class="team-name"> Mari </p>
-                        <p class="team-position"> marketer </p>
+                        <p class="team-position"> Core Team Member </p>
                         <div class="linkss">
                             <a href="https://twitter.com/MaritaLeu" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
@@ -230,7 +232,7 @@
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="Armani.jpeg"> </div>
                         <p class="team-name"> Amarni </p>
-                        <p class="team-position"> marketer </p>
+                        <p class="team-position"> Head Moderator </p>
                         <div class="linkss">
                             <a href="https://twitter.com/armaniamn" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
@@ -239,7 +241,7 @@
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="Tom.jpeg"> </div>
                         <p class="team-name"> Tom </p>
-                        <p class="team-position"> marketer </p>
+                        <p class="team-position"> Co founder </p>
                         <div class="linkss">
                             <a href="https://twitter.com/tom88jerry" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
@@ -250,7 +252,7 @@
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="ParkBoGum.jpeg"> </div>
                         <p class="team-name"> ParkBoGum </p>
-                        <p class="team-position"> marketer </p>
+                        <p class="team-position"> Core Team Member</p>
                         <div class="linkss">
                             <a href="https://twitter.com/condo2minium" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                             <a href="https://instagram.com/condominium" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
@@ -260,7 +262,7 @@
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="Ake.jpeg"> </div>
                         <p class="team-name"> Ake </p>
-                        <p class="team-position"> marketer </p>
+                        <p class="team-position"> Core Team Member</p>
                         <div class="linkss">
                             <a href="https://twitter.com/draltdralt" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
@@ -269,7 +271,7 @@
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="Part.jpeg"> </div>
                         <p class="team-name"> Part </p>
-                        <p class="team-position"> marketer </p>
+                        <p class="team-position"> Head of bubbly’s marketing </p>
                         <div class="linkss">
                             <a href="https://twitter.com/dtpartp" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                             <a href="https://instagram.com/ppart.p" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
@@ -281,7 +283,7 @@
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="Ve.jpeg"> </div>
                         <p class="team-name"> Ve </p>
-                        <p class="team-position"> marketer </p>
+                        <p class="team-position"> Head Moderator </p>
                         <div class="linkss">
                             <a href="https://twitter.com/Vedoteth" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                             <a href="https://www.instagram.com/vvednes_day/" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
@@ -289,8 +291,8 @@
                     </div>
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="ploy.jpeg"> </div>
-                        <p class="team-name"> </p>
-                        <p class="team-position"> marketer </p>
+                        <p class="team-name"> Ploy </p>
+                        <p class="team-position"> Core Team Member </p>
                         <div class="linkss">
                             <a href="https://twitter.com/pylynn" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                             <a href="https://www.instagram.com/pylynn_/" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
@@ -299,11 +301,11 @@
             
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="ploy.jpeg"> </div>
-                        <p class="team-name"> Ploy </p>
-                        <p class="team-position"> marketer </p>
+                        <p class="team-name">Krisdamin</p>
+                        <p class="team-position"> Concept Artist & Story teller</p>
                         <div class="linkss">
-                            <a href="https://twitter.com/pylynn" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
-                            <a href="https://www.instagram.com/pylynn_/" class="text"><i id="instagram" class="fa-brands fa-instagram-square"></i></a>
+                            <a href="https://twitter.com/krisdamin" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
+                            <a href="https://twitter.com/moogisland" class="text"><i id="instagram" class="fa-brands fa-twitter-square"></i></a>
                         </div>
                     </div>
                 </div>
