--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             </section>
 
             <section id="faqs">
-                <details class="faq-details">
+                <p class="faqs-text">Faqs</p>
+                <details class="faq-details faq1">
                     <summary class="faq-header">What is Bubbly NFT?</summary>
                     <p class="faq-text">Fun from Arts, Function From App' - once the rocket
                         ship gears up to a full-stream, it launches into the
@@ -241,7 +242,7 @@
                     <div class="team-div">
                         <div class="img-wrapper"> <img class="image" src="Tom.jpeg"> </div>
                         <p class="team-name"> Tom </p>
-                        <p class="team-position"> Co founder </p>
+                        <p class="team-position"> Co-founder </p>
                         <div class="linkss">
                             <a href="https://twitter.com/tom88jerry" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
@@ -300,12 +301,12 @@
                     </div>
             
                     <div class="team-div">
-                        <div class="img-wrapper"> <img class="image" src="ploy.jpeg"> </div>
+                        <div class="img-wrapper"> <img class="image" src="KrisDamin.jpeg"> </div>
                         <p class="team-name">Krisdamin</p>
-                        <p class="team-position"> Concept Artist & Story teller</p>
+                        <p class="team-position">Co-founder & Art</p>
                         <div class="linkss">
                             <a href="https://twitter.com/krisdamin" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
-                            <a href="https://twitter.com/moogisland" class="text"><i id="instagram" class="fa-brands fa-twitter-square"></i></a>
+                            <a href="https://twitter.com/moogisland" class="text"><i id="twitter" class="fa-brands fa-twitter-square"></i></a>
                         </div>
                     </div>
                 </div>
