--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#arts">Artwork</a></li>
                     <li><a href="#faqs">Faqs</a></li>
                     <li><a href="#team">Team</a></li>
-                    <li><a class="icon" href="https://discord.gg/bubblystory"><i class="fa-brands fa-discord"></i></a> <a class="icon" href="https://medium.com/@bubblystorynft/welcome-to-the-world-of-bubbly-f416e4b2d7cc"> <i class="fa-brands fa-medium"></i> </a> <a class="icon" href="https://twitter.com/BubblyStory"> <i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a class="icon" href="https://discord.gg/bubblystory"><i class="fa-brands fa-discord"></i></a> <a class="icon" href="https://medium.com/@bubblystorynft/welcome-to-the-world-of-bubbly-f416e4b2d7cc"> <i class="fa-brands fa-medium"></i></a> <a class="icon" href="https://twitter.com/BubblyStory"><i class="fa-brands fa-twitter"></i></a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -314,6 +314,7 @@
         </main>
 
         <footer> 
+            <p class="footer bubbly"><a class="icon" href="https://discord.gg/bubblystory"><i class="fa-brands fa-discord"></i></a> <a class="icon" href="https://medium.com/@bubblystorynft/welcome-to-the-world-of-bubbly-f416e4b2d7cc"> <i class="fa-brands fa-medium"></i></a> <a class="icon" href="https://twitter.com/BubblyStory"> <i class="fa-brands fa-twitter"></i></a></p>
             <p class="footer">Designed by <a href="https://twitter.com/SCasitol">olamide</a></p>
             <p class="footer"> Unofficial Bubbly website &copy 2022</p>
         </footer>
