--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <script>
             AOS.init({
                 duration: 1000,
-                once: false,
+                once: true,
             });
           </script>
     </body>
