--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <section id="arts">
                 <p class="sneaktext" data-aos="fade-right"> sneakpeek </p>
-                <div class="sneakpeek" data-aos="fade-right">
+                <div class="sneakpeeks" data-aos="fade-right">
                     <img class="mySlides" src="sneak-1.jpeg" alt="">
                     <img class="mySlides" src="sneak-2.jpeg" alt="">
                     <img class="mySlides" src="sneak-3.jpeg" alt="">
@@ -65,6 +65,7 @@
                     <img class="mySlides" src="sneak-5.jpeg" alt="">
                     <img class="mySlides" src="sneak-6.jpeg" alt="">
                     <img class="mySlides" src="sneak-7.jpeg" alt="">
+                    <img class="mySlides" src="sneak-8.jpeg" alt="">
 
                     <div style="text-align:center"> 
                         <span class="dot" onclick="currentSlide(1)"></span> 
@@ -74,6 +75,7 @@
                         <span class="dot" onclick="currentSlide(5)"></span>
                         <span class="dot" onclick="currentSlide(6)"></span>
                         <span class="dot" onclick="currentSlide(7)"></span>
+                        <span class="dot" onclick="currentSlide(8)"></span>
                     </div>
                 </div>
                 
