--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <div class="blank-space"></div>
 
             <section id="arts">
-                <p class="sneaktext" data-aos="fade-right"> sneakpeek </p>
-                <div class="sneakpeeks" data-aos="fade-right">
+                <p class="sneaktext" data-aos="fade-right"> sneakpeeks </p>
+                <div class="sneakpeek" data-aos="fade-right">
                     <img class="mySlides" src="sneak-1.jpeg" alt="">
                     <img class="mySlides" src="sneak-2.jpeg" alt="">
                     <img class="mySlides" src="sneak-3.jpeg" alt="">
